--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,7 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - AMNAALMGLY
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  -  ogunlao/saint
+  - AMNAALMGLY/rural-urban-Modelbias
+  - AMNAALMGLY/i-Mix-paperImplement
