--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,6 +1,6 @@
-"AJP":
-  url: https://aapt.scitation.org/journal/ajp
+"SIGSPATIAL":
+  url: https://dl.acm.org/doi/proceedings/10.1145/3474717
   color: "#00369f"
 
-"PhysRev":
-  url: https://journals.aps.org/
+"IEEEXplore":
+  url: https://ieeexplore.ieee.org/xpl/conhome/9052497/proceeding
